@@ -291,3 +291,135 @@ CATALINA_BASE=/opt/tomcat8-php
 ```shell
 sudo update-rc.d tomcat8-php defaults 90
 ```
+
+## jvm参数说明
+
+-  -server 一定要作为第一个参数，启用JDK的server版本，在多个CPU时性能佳
+-  -Xms java Heap初始大小。 默认是物理内存的1/64。
+-  -Xmx java heap最大值。建议均设为物理内存的80%。不可超过物理内存。
+-  -Xmn java heap最小值，一般设置为Xmx的3、4分之一。
+-  -XX:PermSize 设定内存的永久保存区初始大小，缺省值为64M。
+-  -XX:MaxPermSize 设定内存的永久保存区最大大小，缺省值为64M。
+-  -XX:SurvivorRatio=2 生还者池的大小，默认是2。如
+-  -XX:NewSize 新生成的池的初始大小。 缺省值为2M。
+-  -XX:MaxNewSize 新生成的池的最大大小。 缺省值为32M。
+-  +XX:AggressiveHeap 让jvm忽略Xmx参数，疯狂地吃完一个G物理内存，再吃尽一个G的swap。
+-  -Xss 每个线程的Stack大小
+-  -verbose:gc 现实垃圾收集信息
+-  -Xloggc:gc.log 指定垃圾收集日志文件
+-  -XX:+UseParNewGC 缩短minor收集的时间
+-  -XX:+UseConcMarkSweepGC 缩短major收集的时间
+-  -XX:userParNewGC 可用来设置并行收集(多CPU)
+-  -XX:ParallelGCThreads 可用来增加并行度(多CPU)
+-  -XX:UseParallelGC 设置后可以使用并行清除收集器(多CPU)
+
+建议和注意事项：
+
+- Java 8 以后 -XX:PermSize 与 -XX:MaxPermSize 两个配置项被废弃
+- -Xms和-Xmx选项设置为相同堆内存分配，以避免在每次GC 后调整堆的大小，堆内存建议占内存的60%~80%;非堆内存是不可回收内存，大小视项目而定;线程栈大小推荐256k.
+
+32G内存配置如下：
+
+`JAVA_OPTS="-Xms20480m -Xmx20480m -Xss1024K -XX:PermSize=512m -XX:MaxPermSize=2048m"`
+
+
+## 管理操作
+
+1、连接数
+
+假设Tomcat接收http请求的端口是8080，则可以使用如下语句查看连接情况：
+
+```shell
+netstat –nat | grep 8080
+```
+
+2、线程
+
+ps命令可以查看进程状态，如执行如下命令：
+
+```shell	
+ps –e | grep java
+```
+
+通过如下命令，可以看到该进程内有多少个线程；其中，nlwp含义是number of light-weight process。
+
+```shell
+ps –o nlwp 27989
+```
+
+要想获得真正在running的线程数量，可以通过以下语句完成：
+
+```shell	
+ps -eLo pid,stat | grep 27989 | grep running | wc -l
+```
+其中ps -eLo pid ,stat可以找出所有线程，并打印其所在的进程号和线程当前的状态；两个grep命令分别筛选进程号和线程状态；wc统计个数。
+
+## Server Status 使用
+
+```shell
+sudo apt-get install tomcat8-admin
+```
+
+`/etc/tomcat8/tomcat-users.xml`
+
+```xml
+<tomcat-users xmlns="http://tomcat.apache.org/xml"
+              xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+              xsi:schemaLocation="http://tomcat.apache.org/xml tomcat-users.xsd"
+              version="1.0">
+<!--
+  NOTE:  By default, no user is included in the "manager-gui" role required
+  to operate the "/manager/html" web application.  If you wish to use this app,
+  you must define such a user - the username and password are arbitrary.
+-->
+<!--
+  NOTE:  The sample user and role entries below are wrapped in a comment
+  and thus are ignored when reading this file. Do not forget to remove
+  <!.. ..> that surrounds them.
+-->
+  <role rolename="admin"/>
+  <role rolename="admin-gui"/>
+  <role rolename="admin-script"/>
+  <role rolename="manager-gui"/>
+  <role rolename="manager-script"/>
+  <role rolename="manager-jmx"/>
+  <role rolename="manager-status"/>
+  <user username="admin" password="admin" roles="admin,admin-gui,admin-script,manager-gui,manager-script,manager-jmx,manager-status"/>
+</tomcat-users>
+```
+
+新建 `conf/Catalina/localhost/manager.xml` 文件：
+```xml
+<Context privileged="true" antiResourceLocking="false"
+         docBase="${catalina.home}/webapps/manager">
+    <Valve className="org.apache.catalina.valves.RemoteAddrValve" allow="^.*$" />
+</Context>
+```
+
+### 查看状态
+
+curl -u admin:admin 'http://localhost:8080/manager/status'
+
+### Manager 支持的命令
+
+Manager 应用能够处理的命令都是通过下面这样的请求 URL 来指定的：
+
+`http://{host}:{port}/manager/text/{command}?{parameters}`
+
+`{host}` 和 `{port}` 分别代表运行 Tomcat 服务器所在的主机名和端口号。`{command}` 代表所要执行的 Manager 命令。`{parameters}` 代表该命令所专有的查询参数。在后面的实例中，可以为你的安装自定义适当的主机和端口。
+
+这些命令通常是被 HTTP GET 请求执行的。`/deploy` 命令有一种能够被 HTTP PUT 请求所执行的形式。
+
+* 常见参数
+
+多数 Manager 命令都能够接受一个或多个查询参数，这些查询参数如下所示：
+
+-    path 要处理的 Web 应用的上下文路径（包含前面的斜杠）。要想选择 ROOT Web 应用，指定 / 即可。注意：无法对 Manager 应用自身执行管理命令。
+-    version 并行部署 所用的 Web 应用版本号。
+-    war Web 应用归档（WAR）文件的 URL，或者含有 Web 应用的目录路径名，或者是上下文配置 .xml 文件。你可以按照以下任一格式使用 URL：
+-        file:/absolute/path/to/a/directory 解压缩后的 Web 应用所在的目录的绝对路径。它将不做任何改动，直接附加到你所指定的上下文路径上。
+-        file:/absolute/path/to/a/webapp.war Web 应用归档（WAR）文件的绝对路径。只对 /deploy 命令有效，也是该命令所唯一能接受的格式。
+-        jar:file:/absolute/path/to/a/warfile.war!/ 本地 WAR 文件的 URL。另外，为了能够完整引用一个JAR 文件，你可以采用 JarURLConnection 类的任何有效语法。
+-        file:/absolute/path/to/a/context.xml Web 应用上下文配置 .xml 文件的绝对路径，上下文配置文件包含着上下文配置元素。
+-        directory 主机应用的基本目录中的 Web 应用的目录名称。
+-        webapp.war 主机应用的基本目录中的 WAR 文件的名称
